Log into registry

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,5 +15,6 @@ jobs:
           shell: bash
           run: |
             IMAGE_ID=docker.pkg.github.com/${{ github.repository }}:$GITHUB_SHA
+            echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
             docker build -t $IMAGE_ID .
             docker push $IMAGE_ID
