--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,7 +14,7 @@ jobs:
         - name: Build and push
           shell: bash
           run: |
-            IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/web:$GITHUB_SHA
-            echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+            echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login --username fpcojenkins --password-stdin
+            IMAGE_ID=fpco/windows-docker-web
             docker build -t $IMAGE_ID .
             docker push $IMAGE_ID
