--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "simple-web-service"
+name = "windows-docker-web"
 version = "0.1.0"
 authors = ["Michael Snoyman <msnoyman@fpcomplete.com>"]
 edition = "2018"
 
 [dependencies]
-actix-web = "2.0"
-actix-rt = "1.0"
+actix-web = "3.1"
